--- a/Algebraic_relational_modeling/Algebraic_relational_modeling.ipynb
+++ b/Algebraic_relational_modeling/Algebraic_relational_modeling.ipynb
@@ -53,6 +53,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Use the set notations: union, intersect or except, \n",
+    "on the Chinook dataset to find the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "1. The union of all the tracks with genreid 18 and 20:\n"
    ]
@@ -751,10 +761,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>customerid</th>\n",
+       "        <th>firstname</th>\n",
+       "        <th>lastname</th>\n",
+       "        <th>company</th>\n",
+       "        <th>address</th>\n",
+       "        <th>city</th>\n",
+       "        <th>state</th>\n",
+       "        <th>country</th>\n",
+       "        <th>postalcode</th>\n",
+       "        <th>phone</th>\n",
+       "        <th>fax</th>\n",
+       "        <th>email</th>\n",
+       "        <th>supportrepid</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>21</td>\n",
+       "        <td>Kathy</td>\n",
+       "        <td>Chase</td>\n",
+       "        <td>None</td>\n",
+       "        <td>801 W 4th Street</td>\n",
+       "        <td>Reno</td>\n",
+       "        <td>NV</td>\n",
+       "        <td>USA</td>\n",
+       "        <td>89503</td>\n",
+       "        <td>+1 (775) 223-7665</td>\n",
+       "        <td>None</td>\n",
+       "        <td>kachase@hotmail.com</td>\n",
+       "        <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>22</td>\n",
+       "        <td>Heather</td>\n",
+       "        <td>Leacock</td>\n",
+       "        <td>None</td>\n",
+       "        <td>120 S Orange Ave</td>\n",
+       "        <td>Orlando</td>\n",
+       "        <td>FL</td>\n",
+       "        <td>USA</td>\n",
+       "        <td>32801</td>\n",
+       "        <td>+1 (407) 999-7788</td>\n",
+       "        <td>None</td>\n",
+       "        <td>hleacock@gmail.com</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>16</td>\n",
+       "        <td>Frank</td>\n",
+       "        <td>Harris</td>\n",
+       "        <td>Google Inc.</td>\n",
+       "        <td>1600 Amphitheatre Parkway</td>\n",
+       "        <td>Mountain View</td>\n",
+       "        <td>CA</td>\n",
+       "        <td>USA</td>\n",
+       "        <td>94043-1351</td>\n",
+       "        <td>+1 (650) 253-0000</td>\n",
+       "        <td>+1 (650) 253-0000</td>\n",
+       "        <td>fharris@google.com</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>28</td>\n",
+       "        <td>Julia</td>\n",
+       "        <td>Barnett</td>\n",
+       "        <td>None</td>\n",
+       "        <td>302 S 700 E</td>\n",
+       "        <td>Salt Lake City</td>\n",
+       "        <td>UT</td>\n",
+       "        <td>USA</td>\n",
+       "        <td>84102</td>\n",
+       "        <td>+1 (801) 531-7272</td>\n",
+       "        <td>None</td>\n",
+       "        <td>jubarnett@gmail.com</td>\n",
+       "        <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>19</td>\n",
+       "        <td>Tim</td>\n",
+       "        <td>Goyer</td>\n",
+       "        <td>Apple Inc.</td>\n",
+       "        <td>1 Infinite Loop</td>\n",
+       "        <td>Cupertino</td>\n",
+       "        <td>CA</td>\n",
+       "        <td>USA</td>\n",
+       "        <td>95014</td>\n",
+       "        <td>+1 (408) 996-1010</td>\n",
+       "        <td>+1 (408) 996-1011</td>\n",
+       "        <td>tgoyer@apple.com</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>18</td>\n",
+       "        <td>Michelle</td>\n",
+       "        <td>Brooks</td>\n",
+       "        <td>None</td>\n",
+       "        <td>627 Broadway</td>\n",
+       "        <td>New York</td>\n",
+       "        <td>NY</td>\n",
+       "        <td>USA</td>\n",
+       "        <td>10012-2612</td>\n",
+       "        <td>+1 (212) 221-3546</td>\n",
+       "        <td>+1 (212) 221-4679</td>\n",
+       "        <td>michelleb@aol.com</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>17</td>\n",
+       "        <td>Jack</td>\n",
+       "        <td>Smith</td>\n",
+       "        <td>Microsoft Corporation</td>\n",
+       "        <td>1 Microsoft Way</td>\n",
+       "        <td>Redmond</td>\n",
+       "        <td>WA</td>\n",
+       "        <td>USA</td>\n",
+       "        <td>98052-8300</td>\n",
+       "        <td>+1 (425) 882-8080</td>\n",
+       "        <td>+1 (425) 882-8081</td>\n",
+       "        <td>jacksmith@microsoft.com</td>\n",
+       "        <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>26</td>\n",
+       "        <td>Richard</td>\n",
+       "        <td>Cunningham</td>\n",
+       "        <td>None</td>\n",
+       "        <td>2211 W Berry Street</td>\n",
+       "        <td>Fort Worth</td>\n",
+       "        <td>TX</td>\n",
+       "        <td>USA</td>\n",
+       "        <td>76110</td>\n",
+       "        <td>+1 (817) 924-7272</td>\n",
+       "        <td>None</td>\n",
+       "        <td>ricunningham@hotmail.com</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>20</td>\n",
+       "        <td>Dan</td>\n",
+       "        <td>Miller</td>\n",
+       "        <td>None</td>\n",
+       "        <td>541 Del Medio Avenue</td>\n",
+       "        <td>Mountain View</td>\n",
+       "        <td>CA</td>\n",
+       "        <td>USA</td>\n",
+       "        <td>94040-111</td>\n",
+       "        <td>+1 (650) 644-3358</td>\n",
+       "        <td>None</td>\n",
+       "        <td>dmiller@comcast.com</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>27</td>\n",
+       "        <td>Patrick</td>\n",
+       "        <td>Gray</td>\n",
+       "        <td>None</td>\n",
+       "        <td>1033 N Park Ave</td>\n",
+       "        <td>Tucson</td>\n",
+       "        <td>AZ</td>\n",
+       "        <td>USA</td>\n",
+       "        <td>85719</td>\n",
+       "        <td>+1 (520) 622-4200</td>\n",
+       "        <td>None</td>\n",
+       "        <td>patrick.gray@aol.com</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>24</td>\n",
+       "        <td>Frank</td>\n",
+       "        <td>Ralston</td>\n",
+       "        <td>None</td>\n",
+       "        <td>162 E Superior Street</td>\n",
+       "        <td>Chicago</td>\n",
+       "        <td>IL</td>\n",
+       "        <td>USA</td>\n",
+       "        <td>60611</td>\n",
+       "        <td>+1 (312) 332-3232</td>\n",
+       "        <td>None</td>\n",
+       "        <td>fralston@gmail.com</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(21, 'Kathy', 'Chase', None, '801 W 4th Street', 'Reno', 'NV', 'USA', '89503', '+1 (775) 223-7665', None, 'kachase@hotmail.com', 5),\n",
+       " (22, 'Heather', 'Leacock', None, '120 S Orange Ave', 'Orlando', 'FL', 'USA', '32801', '+1 (407) 999-7788', None, 'hleacock@gmail.com', 4),\n",
+       " (16, 'Frank', 'Harris', 'Google Inc.', '1600 Amphitheatre Parkway', 'Mountain View', 'CA', 'USA', '94043-1351', '+1 (650) 253-0000', '+1 (650) 253-0000', 'fharris@google.com', 4),\n",
+       " (28, 'Julia', 'Barnett', None, '302 S 700 E', 'Salt Lake City', 'UT', 'USA', '84102', '+1 (801) 531-7272', None, 'jubarnett@gmail.com', 5),\n",
+       " (19, 'Tim', 'Goyer', 'Apple Inc.', '1 Infinite Loop', 'Cupertino', 'CA', 'USA', '95014', '+1 (408) 996-1010', '+1 (408) 996-1011', 'tgoyer@apple.com', 3),\n",
+       " (18, 'Michelle', 'Brooks', None, '627 Broadway', 'New York', 'NY', 'USA', '10012-2612', '+1 (212) 221-3546', '+1 (212) 221-4679', 'michelleb@aol.com', 3),\n",
+       " (17, 'Jack', 'Smith', 'Microsoft Corporation', '1 Microsoft Way', 'Redmond', 'WA', 'USA', '98052-8300', '+1 (425) 882-8080', '+1 (425) 882-8081', 'jacksmith@microsoft.com', 5),\n",
+       " (26, 'Richard', 'Cunningham', None, '2211 W Berry Street', 'Fort Worth', 'TX', 'USA', '76110', '+1 (817) 924-7272', None, 'ricunningham@hotmail.com', 4),\n",
+       " (20, 'Dan', 'Miller', None, '541 Del Medio Avenue', 'Mountain View', 'CA', 'USA', '94040-111', '+1 (650) 644-3358', None, 'dmiller@comcast.com', 4),\n",
+       " (27, 'Patrick', 'Gray', None, '1033 N Park Ave', 'Tucson', 'AZ', 'USA', '85719', '+1 (520) 622-4200', None, 'patrick.gray@aol.com', 4),\n",
+       " (24, 'Frank', 'Ralston', None, '162 E Superior Street', 'Chicago', 'IL', 'USA', '60611', '+1 (312) 332-3232', None, 'fralston@gmail.com', 3)]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT * FROM customer WHERE country='USA' EXCEPT SELECT * FROM customer WHERE email LIKE '%yahoo.com';"
+   ]
   },
   {
    "cell_type": "code",
@@ -770,10 +994,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>albumid</th>\n",
+       "        <th>title</th>\n",
+       "        <th>artistid</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>277</td>\n",
+       "        <td>Bach: Goldberg Variations</td>\n",
+       "        <td>211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>327</td>\n",
+       "        <td>Bach: Orchestral Suites Nos. 1 - 4</td>\n",
+       "        <td>257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>300</td>\n",
+       "        <td>Bach: The Brandenburg Concertos</td>\n",
+       "        <td>234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>278</td>\n",
+       "        <td>Bach: The Cello Suites</td>\n",
+       "        <td>212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>297</td>\n",
+       "        <td>Bach: Toccata &amp; Fugue in D Minor</td>\n",
+       "        <td>231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>276</td>\n",
+       "        <td>Bach: Violin Concertos</td>\n",
+       "        <td>210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>335</td>\n",
+       "        <td>J.S. Bach: Chaconne, Suite in E Minor, Partita in E Major &amp; Prelude, Fugue and Allegro</td>\n",
+       "        <td>265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>317</td>\n",
+       "        <td>Mozart Gala: Famous Arias</td>\n",
+       "        <td>249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>346</td>\n",
+       "        <td>Mozart: Chamber Music</td>\n",
+       "        <td>274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>320</td>\n",
+       "        <td>Mozart: Symphonies Nos. 40 &amp; 41</td>\n",
+       "        <td>248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>282</td>\n",
+       "        <td>Mozart: Wind Concertos</td>\n",
+       "        <td>216</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(277, 'Bach: Goldberg Variations', 211),\n",
+       " (327, 'Bach: Orchestral Suites Nos. 1 - 4', 257),\n",
+       " (300, 'Bach: The Brandenburg Concertos', 234),\n",
+       " (278, 'Bach: The Cello Suites', 212),\n",
+       " (297, 'Bach: Toccata & Fugue in D Minor', 231),\n",
+       " (276, 'Bach: Violin Concertos', 210),\n",
+       " (335, 'J.S. Bach: Chaconne, Suite in E Minor, Partita in E Major & Prelude, Fugue and Allegro', 265),\n",
+       " (317, 'Mozart Gala: Famous Arias', 249),\n",
+       " (346, 'Mozart: Chamber Music', 274),\n",
+       " (320, 'Mozart: Symphonies Nos. 40 & 41', 248),\n",
+       " (282, 'Mozart: Wind Concertos', 216)]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT * FROM album WHERE title LIKE '%Mozart%' UNION SELECT * FROM album WHERE title LIKE '%Bach%' ORDER BY title;"
+   ]
   }
  ],
  "metadata": {
